--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,8 +21,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
-        python-version: [3.8, 3.9, "3.10"]
+        os: [macOS-latest, ubuntu-latest]
+        python-version: [3.9, "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
