--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -1,13 +1,24 @@
-hipen_protocol:
-  hipen_idx: 0
-  nnp: "ani2x"
-  implementation: "torchani"
-  nr_of_simulation_steps: 5_000
+# config.yaml
+tests:
+  - protocol: "hipen_protocol"
+    hipen_idx: 0
+    nnp: "ani2x"
+    implementation: "torchani"
+    temperature: 300
+    nr_of_simulation_steps: 10_000
 
-waterbox_protocol:
-  edge_length: 15
-  ensemble: "npt"
-  nnp: "ani2x"
-  implementation: "torchani"
-  annealing: false
-  nr_of_simulation_steps: 5_000
+  - protocol: "hipen_protocol"
+    hipen_idx: 1
+    nnp: "ani2x"
+    implementation: "nnpops"
+    temperature: [300, 400, 500]
+    nr_of_simulation_steps: 10_000
+
+  - protocol: "waterbox_protocol"
+    edge_length: 15
+    ensemble: "npt"
+    nnp: "ani2x"
+    implementation: "torchani"
+    annealing: false
+    nr_of_simulation_steps: 10_000
+    temperature: 300
