--- a/stability_test/tests/stability_test_alanine_dipeptide.yaml
+++ b/stability_test/tests/stability_test_alanine_dipeptide.yaml
@@ -6,5 +6,5 @@ tests:
     nnp: "ani2x"
     implementation: "nnpops"
     annealing: false
-    nr_of_simulation_steps: 10_000
+    nr_of_simulation_steps: 100
     temperature: 300
