--- a/stability_test/tests/stability_test_waterbox.yaml
+++ b/stability_test/tests/stability_test_waterbox.yaml
@@ -1,10 +1,10 @@
 # config.yaml
 tests:
   - protocol: "waterbox_protocol"
-    edge_length: 15
+    edge_length: 10
     ensemble: "npt"
     nnp: "ani2x"
     implementation: "nnpops"
     annealing: false
-    nr_of_simulation_steps: 10_000
+    nr_of_simulation_steps: 100
     temperature: 300
