--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 # Self-descriptive entries which should always be present
 # https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
 [project]
-name = "stability_test"
+name = "guardowl"
 description = "Perform stability tests for Neural Network Potentials"
 dynamic = ["version"]
 readme = "README.md"
@@ -26,8 +26,8 @@ requires-python = ">=3.8"
 
 # Update the urls once the hosting is set up.
 #[project.urls]
-#"Source" = "https://github.com/<username>/stability_test/"
-#"Documentation" = "https://stability_test.readthedocs.io/"
+#"Source" = "https://github.com/<username>/guardowl/"
+#"Documentation" = "https://guardowl.readthedocs.io/"
 
 [project.optional-dependencies]
 test = [
@@ -62,7 +62,7 @@ where = ["."]
 
 # Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
 [tool.setuptools.package-data]
-stability_test = [
+guardowl = [
     "py.typed"
 ]
 
@@ -82,4 +82,4 @@ match = ["*"]
 default-tag = "1.0.0"
 
 [tool.versioningit.write]
-file = "stability_test/_version.py"
+file = "guardowl/_version.py"
