--- a/guardowl/tests/stability_test_alanine_dipeptide.yaml
+++ b/guardowl/tests/stability_test_alanine_dipeptide.yaml
@@ -4,7 +4,7 @@ tests:
     env: "solvent"
     ensemble: "npt"
     nnp: "ani2x"
-    implementation: "nnpops"
+    implementation: "torchani"
     annealing: false
     nr_of_simulation_steps: 100
     temperature: 300
