--- a/guardowl/tests/stability_test_hipen.yaml
+++ b/guardowl/tests/stability_test_hipen.yaml
@@ -3,6 +3,6 @@ tests:
   - protocol: "hipen_protocol"
     hipen_idx: 0
     nnp: "ani2x"
-    implementation: "nnpops"
+    implementation: "torchani"
     temperature: 300
     nr_of_simulation_steps: 100
