--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -8,7 +8,6 @@ dependencies:
   - python
   - pip
   - openmm>=8.0
-  - openmm-ml
   - openmm-torch
   - openff-toolkit
   - openmmtools
@@ -32,5 +31,6 @@ dependencies:
 
     # Pip-only installs
   - pip:
-      - nvidia-ml-py3
-      - nptyping
+     - nvidia-ml-py3
+     - nptyping
+     - git+https://github.com/openmm/openmm-ml.git
