--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -20,9 +20,12 @@ dependencies:
   - seaborn
   - pytorch #=1.11.0
   - loguru
-  # Testing
   - nglview
-  - fire
+  # Testing
+  - pytest
+  - pytest-cov
+  - codecov
+  - black
 
     # Testing
   - pytest
