--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -8,7 +8,6 @@ dependencies:
   - python
   - pip
   - openmm>=8.0
-  - openmm-ml
   - openmm-torch
   - openff-toolkit
   - openmmtools
@@ -21,9 +20,12 @@ dependencies:
   - seaborn
   - pytorch #=1.11.0
   - loguru
-  # Testing
   - nglview
-  - fire
+  # Testing
+  - pytest
+  - pytest-cov
+  - codecov
+  - black
 
     # Testing
   - pytest
@@ -32,5 +34,6 @@ dependencies:
 
     # Pip-only installs
   - pip:
-      - nvidia-ml-py3
-      - nptyping
+     - nvidia-ml-py3
+     - nptyping
+     - git+https://github.com/openmm/openmm-ml.git
