--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -1,24 +1,48 @@
 # config.yaml
 tests:
+  - protocol: "perform_alanine_dipeptide_protocol"
+    env: "solvent"
+    ensemble: "npt"
+    nnp: "ani2x"
+    implementation: "torchani"
+    annealing: false
+    nr_of_simulation_steps: 50_000
+    temperature: 300
+
   - protocol: "hipen_protocol"
     hipen_idx: 0
     nnp: "ani2x"
     implementation: "torchani"
     temperature: 300
-    nr_of_simulation_steps: 10_000
+    nr_of_simulation_steps: 50_000
 
   - protocol: "hipen_protocol"
     hipen_idx: 1
     nnp: "ani2x"
     implementation: "nnpops"
     temperature: [300, 400, 500]
-    nr_of_simulation_steps: 10_000
+    nr_of_simulation_steps: 100_000
+
+  - protocol: "waterbox_protocol"
+    edge_length: 15
+    ensemble: "NVT"
+    nnp: "ani2x"
+    implementation: "nnpops"
+    annealing: false
+    nr_of_simulation_steps: 50_000
+    temperature: 300
 
   - protocol: "waterbox_protocol"
     edge_length: 15
     ensemble: "npt"
     nnp: "ani2x"
-    implementation: "torchani"
+    implementation: "nnpops"
     annealing: false
-    nr_of_simulation_steps: 10_000
+    nr_of_simulation_steps: 50_000
     temperature: 300
+
+  - protocol: "perform_DOF_scan"
+    nnp: "ani2x"
+    implementation: "torchani"
+    DOF_definition: { "bond": [0, 2] }
+    molecule_name: "ethanol"
