--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -10,7 +10,7 @@ tests:
     temperature: 300
 
   - protocol: "hipen_protocol"
-    hipen_idx: 0
+    hipen_idx: [0,1,2,3,4,5,6,7,8,9]
     nnp: "ani2x"
     implementation: "torchani"
     temperature: 300
