--- a/guardowl/tests/stability_test_pure_liquid.yaml
+++ b/guardowl/tests/stability_test_pure_liquid.yaml
@@ -8,4 +8,5 @@ tests:
     implementation: "torchani"
     annealing: false
     nr_of_simulation_steps: 5
+    nr_of_equilibration_steps: 5
     temperature: 300
