--- a/guardowl/tests/stability_test_pure_liquid.yaml
+++ b/guardowl/tests/stability_test_pure_liquid.yaml
@@ -1,11 +1,12 @@
 # config.yaml
 tests:
   - protocol: "perform_pure_liquid_protocol"
-    molecule_name: ["ethane", "ethane", "butane"]
-    nr_of_molecule: [10, 20, 30]
+    molecule_name: ["ethane", "butane"]
+    nr_of_molecule: [10, 20]
     ensemble: "npt"
     nnp: "ani2x"
     implementation: "torchani"
     annealing: false
     nr_of_simulation_steps: 5
+    nr_of_equilibration_steps: 5
     temperature: 300
