--- a/guardowl/tests/stability_test_hipen.yaml
+++ b/guardowl/tests/stability_test_hipen.yaml
@@ -1,7 +1,7 @@
 # config.yaml
 tests:
   - protocol: "hipen_protocol"
-    hipen_idx: 0
+    hipen_idx: [0,1]
     nnp: "ani2x"
     implementation: "torchani"
     temperature: 300
