--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,9 @@ ENV/
 
 # In-tree generated files
 */_version.py
+scripts/test_stability_protocol/
+*pdb
+*dcd
+*pt
+test_stability_protocol/
+guardowl/data/drugbank/
