--- a/guardowl/tests/stability_test_alanine_dipeptide.yaml
+++ b/guardowl/tests/stability_test_alanine_dipeptide.yaml
@@ -1,6 +1,6 @@
 # config.yaml
 tests:
-  - protocol: "alanine_dipeptide_protocol"
+  - protocol: "alanine_dipeptide_test"
     env: "vacuum"
     ensemble: "npt"
     nnp: "ani2x"
