--- a/guardowl/tests/stability_test_waterbox.yaml
+++ b/guardowl/tests/stability_test_waterbox.yaml
@@ -1,6 +1,6 @@
 # config.yaml
 tests:
-  - protocol: "waterbox_protocol"
+  - protocol: "waterbox_test"
     edge_length: 5
     ensemble: "npt"
     nnp: "ani2x"
