--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -1,7 +1,7 @@
 # config.yaml
 potentials:
   - physicsml-model:
-      - model_name: 'MACE'
+      - model_name: "MACE"
       - precision: 64
       - position_scaling: 10.0
       - output_scaling: 4.184 * 627
@@ -11,7 +11,7 @@ potentials:
       - model_name: "ANI2x"
 
 tests:
-  - protocol: "alanine_dipeptide_protocol"
+  - protocol: "alanine_dipeptide_test"
     env: "solution"
     ensemble: "npt"
     nnp: "ani2x"
@@ -19,7 +19,7 @@ tests:
     nr_of_simulation_steps: 50
     temperature: 300
 
-  - protocol: "alanine_dipeptide_protocol"
+  - protocol: "alanine_dipeptide_test"
     env: "vacuum"
     ensemble: "npt"
     nnp: "ani2x"
@@ -27,13 +27,13 @@ tests:
     nr_of_simulation_steps: 500
     temperature: 300
 
-  - protocol: "hipen_protocol"
+  - protocol: "hipen_test"
     hipen_idx: [0, 1, 15]
     nnp: "ani2x"
     temperature: [300, 400, 500]
     nr_of_simulation_steps: 500
 
-  - protocol: "waterbox_protocol"
+  - protocol: "waterbox_test"
     edge_length: 25
     ensemble: "npt"
     nnp: "ani2x"
@@ -41,7 +41,7 @@ tests:
     nr_of_simulation_steps: 50
     temperature: 300
 
-  - protocol: "waterbox_protocol"
+  - protocol: "waterbox_test"
     edge_length: 25
     ensemble: "npt"
     nnp: "ani2x"
@@ -49,7 +49,7 @@ tests:
     nr_of_simulation_steps: 50
     temperature: 500
 
-  - protocol: "pure_liquid_protocol"
+  - protocol: "organic_liquid_test"
     molecule_name: ["ethane", "butane", "methanol"]
     nr_of_molecule: [100, 200, 300]
     ensemble: "npt"
