--- a/scripts/alanine.yaml
+++ b/scripts/alanine.yaml
@@ -1,4 +1,16 @@
 # config.yaml
+potentials:
+  - provider: "physicsml-model"
+    model_name: "MACE"
+    precision: 64
+    position_scaling: 10.0
+    output_scaling: 4.184 * 627
+    model_path: "/guardowl/tests/data/physics-ml/mace"
+
+  - provider: "openmmml"
+    model_name: "ANI2x"
+
+
 tests:
   - protocol: "perform_alanine_dipeptide_test"
     env: "solution"
