--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -1,20 +1,19 @@
 # config.yaml
 potentials:
-  - physicsml-model:
-      - model_name: "MACE"
-      - precision: 64
-      - position_scaling: 10.0
-      - output_scaling: 4.184 * 627
-      - model_path: "path_to_model"
+  - provider: "physicsml-model"
+    model_name: "MACE"
+    precision: 64
+    position_scaling: 10.0
+    output_scaling: 4.184 * 627
+    model_path: "/guardowl/tests/data/physics-ml/mace"
 
-  - openmmml:
-      - model_name: "ANI2x"
+  - provider: "openmmml"
+    model_name: "ANI2x"
 
 tests:
   - protocol: "alanine_dipeptide_test"
     env: "solution"
     ensemble: "npt"
-    nnp: "ani2x"
     annealing: false
     nr_of_simulation_steps: 50
     temperature: 300
@@ -22,21 +21,23 @@ tests:
   - protocol: "alanine_dipeptide_test"
     env: "vacuum"
     ensemble: "npt"
-    nnp: "ani2x"
     annealing: false
     nr_of_simulation_steps: 500
     temperature: 300
 
-  - protocol: "hipen_test"
-    hipen_idx: [0, 1, 15]
-    nnp: "ani2x"
+  - protocol: "small_molecule_test"
+    smiles:
+      [
+        r"CCOc1ccc2nc(/N=C\c3ccccc3O)sc2c1",
+        r"Cn1cc(Cl)c(/C=N/O)n1",
+        r"S=c1cc(-c2ccc(Cl)cc2)ss1",
+      ]
     temperature: [300, 400, 500]
     nr_of_simulation_steps: 500
 
   - protocol: "waterbox_test"
     edge_length: 25
     ensemble: "npt"
-    nnp: "ani2x"
     annealing: false
     nr_of_simulation_steps: 50
     temperature: 300
@@ -44,7 +45,6 @@ tests:
   - protocol: "waterbox_test"
     edge_length: 25
     ensemble: "npt"
-    nnp: "ani2x"
     annealing: false
     nr_of_simulation_steps: 50
     temperature: 500
@@ -53,7 +53,6 @@ tests:
     molecule_name: ["ethane", "butane", "methanol"]
     nr_of_molecule: [100, 200, 300]
     ensemble: "npt"
-    nnp: "ani2x"
     annealing: false
     nr_of_simulation_steps: 50
     nr_of_equilibration_steps: 50
