--- a/scripts/test_config.yaml
+++ b/scripts/test_config.yaml
@@ -2,10 +2,11 @@
 potentials:
   - provider: "physics-ml"
     model_name: "MACE"
-    precision: 64
+    precision: "64"
     position_scaling: 10.0
     output_scaling: 4.184 * 627
     model_path: "/guardowl/tests/data/physics-ml/mace"
+    device: "cuda"
 
   - provider: "openmm-ml"
     model_name: "ANI2x"
