--- a/guardowl/tests/stability_test_small_molecule.yaml
+++ b/guardowl/tests/stability_test_small_molecule.yaml
@@ -1,13 +1,7 @@
 potentials:
-  - provider: "physics-ml"
-    model_name: "MACE"
-    precision: 64
-    position_scaling: 10.0
-    output_scaling: 2623368 # 4.184 * 627
-    model_path: "guardowl/tests/data/physics-ml/mace"
-
   - provider: "openmm-ml"
-    model_name: "ANI2x"
+    model_name: "ani2x"
+    implementation: "nnpops"
 
 tests:
   - protocol: "small_molecule_test"
