--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,49 +15,56 @@ on:
     #   (from https://help.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events-schedule)
     - cron: "0 0 * * 0"
 
+concurrency:
+  group: "${{ github.workflow }}-${{ github.ref }}"
+  cancel-in-progress: true
+
+defaults:
+  run:
+    shell: bash -l {0}
+
 jobs:
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        python-version: [3.9, "3.10", "3.11"]
+        os: [macOS-latest, ubuntu-latest]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Additional info about the build
-        shell: bash
         run: |
           uname -a
           df -h
           ulimit -a
 
       # More info on options: https://github.com/marketplace/actions/provision-with-micromamba
-      - uses: mamba-org/provision-with-micromamba@main
-        env:
-          CONDA_OVERRIDE_CUDA: "11.4"
+      - uses: mamba-org/setup-micromamba@v1
         with:
-          python-version: ${{ matrix.python-version }}
           environment-file: devtools/conda-envs/test_env.yaml
-          channels: conda-forge,defaults
+          cache-environment: true
+          cache-downloads: true
+          create-args: >-
+            python=${{ matrix.python-version }}
 
       - name: Install package
         # conda setup requires this special shell
-        shell: bash -l {0}
         run: |
           python -m pip install . --no-deps
           micromamba list
 
       - name: Run tests
         # conda setup requires this special shell
-        shell: bash -l {0}
         run: |
-          pytest -v --cov=guardowl --cov-report=xml --color=yes guardowl/tests/
+          pytest -v --cov=modelforge --cov-report=xml --color=yes --durations=10 modelforge/tests/
 
       - name: CodeCov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
+        if: ${{ github.event != 'schedule' }}  # Don't upload results on scheduled runs
         with:
           file: ./coverage.xml
           flags: unittests
