--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Run tests
         # conda setup requires this special shell
         run: |
-          pytest -v --cov=modelforge --cov-report=xml --color=yes --durations=10 modelforge/tests/
+          pytest -v --cov=guardowl --cov-report=xml --color=yes --durations=10 guardowl/tests/
 
       - name: CodeCov
         uses: codecov/codecov-action@v3
